# khipu

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  llm.txt  pyproject.toml
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.wai/: config.toml
.wai/projects/khipu/: .reflect-meta  .state
.wai/projects/khipu/plans/: 2026-03-05-tracer-bullet-implementation-plan-for-khipu-g.md
.wai/projects/khipu/research/: 2026-03-04-khipu-is-a-python-tool-agnostic-agent-trace-analyz.md
.wai/resources/reflections/: 2026-03-04-khipu.md
openspec/: project.md
openspec/specs/analyze/: spec.md
openspec/specs/backends/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/condense/: spec.md
openspec/specs/config/: spec.md
openspec/specs/emit/: spec.md
openspec/specs/ingest/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/redact/: spec.md
src/khipu/: __init__.py  analyze.py  cli.py  condense.py  emit.py  ingest.py  model.py  redact.py
src/khipu/backends/: claude_cli.toml
src/khipu/ingestors/: claude_code.py  generic.py
src/khipu/prompts/: crystallize.md  patterns.md  workflows.md
src/khipu/templates/: report.md
tests/: test_analyze.py  test_cli.py  test_condense.py  test_emit.py  test_ingest.py  test_model.py  test_public_api.py  test_redact.py
