[project]
name = "khipu"
version = "0.1.0"
description = "Agent trace forensics & workflow crystallization"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "jinja2>=3.1",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
khipu = "khipu.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/khipu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/khipu --cov-report=term-missing"

[tool.coverage.run]
source = ["src/khipu"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/khipu"]
